# mandelbrot-wasm-rust-rayon

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  main.js  serve.py  worker.js
.cargo/: config.toml
pkg/: beh.js  beh_bg.wasm
src/: lib.rs  pool.rs
