[package]
name = "Mandelbrot-wasm"
version = "0.1.0"
authors = ["Narek Galstyan <narekg@princeton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["cdylib"]


[dependencies]
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1"
rayon="1.3.0"
futures-channel-preview = "0.3.0-alpha.18"
wasm-bindgen-futures = {git="https://github.com/rustwasm/wasm-bindgen.git", version="0.4.13"}
#https://github.com/rustwasm/wasm-bindgen.git

#wasm-bindgen-futures = {git="https://github.com/rustwasm/wasm-bindgen.git", version="0.4.13"}
wasm-bindgen= { git="https://github.com/rustwasm/wasm-bindgen.git", features = ['serde-serialize'] }
js-sys = {git="https://github.com/rustwasm/wasm-bindgen.git"}
[dependencies.web-sys]
git="https://github.com/rustwasm/wasm-bindgen.git"
#version = "0.3.23"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]

[patch.crates-io]
wasm-bindgen = {git="https://github.com/rustwasm/wasm-bindgen.git"}
js-sys = {git="https://github.com/rustwasm/wasm-bindgen.git"}
web-sys = {git="https://github.com/rustwasm/wasm-bindgen.git"}

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0